--- a/frontend/beerroster/package.json
+++ b/frontend/beerroster/package.json
@@ -16,6 +16,7 @@
     "vee-validate": "^2.1.0-beta.9",
     "vue": "^2.5.17",
     "vue-axios": "^2.1.3",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.2.0",
     "vuex": "^3.0.1"
