Properly implement JwtToken authorization from the front to the backend. :)

--- a/backend/beerrosterapi/BeerRosterAPI/appsettings.json
+++ b/backend/beerrosterapi/BeerRosterAPI/appsettings.json
@@ -5,9 +5,11 @@
     }
   },
   "AllowedHosts": "*",
-  "connectionStrings": {
-    "beerRosterDBConnectionString": "Server=sandi-pc\\sqlexpress;Database=BeerRoster;Trusted_Connection=True;"
-    //"beerRosterDBConnectionString": "Server=localhost;Database=BeerRoster;Trusted_Connection=True;"
-
+  "ConnectionStrings": {
+    //"BeerRosterDBConnectionString": "Server=sandi-pc\\sqlexpress;Database=BeerRoster;Trusted_Connection=True;"
+    "BeerRosterDBConnectionString": "Server=localhost;Database=BeerRoster;Trusted_Connection=True;"
+  },
+  "JwtToken": {
+    "EncryptionKey": "My JwtToken secret encryption key. It is so secure, you can't hack it!'"
   }
 }
